# Local-Navier-Stokes

./: .gitignore  01_Foundation.md  CLAUDE.md  GEMINI.md  pyproject.toml  step1_1_final_fix.py  step1_2_clean.py  step1_2_quick_test.py  step1_3_implementation.py  step2_1_tvd_limiting.py  step2_2_muscl.py  temp_phase1_fix.py  update_notebook_version.py
00_Motivation/: 00a_NS_Critique.ipynb  00b_NS_Critique.ipynb  00c_NS_Critique.ipynb  01_LNS_Solver_1D_Toy model.ipynb
01_LNS/: 01_LNS_Solver_1D_EnhancedPhysics.ipynb  02_LNS_Transonic_Analysis.ipynb
03_LNS_Series2/: LNS_Phase1_Fixed.ipynb  LNS_Phase1_Implementation.ipynb  LNS_Series2_NB1_AdvancedNumerics.ipynb  LNS_Series2_NB1b_Validation.ipynb  LNS_Series2_NB1b_Validation_Fixed.ipynb  LNS_Series2_NB2_3D_Implementation.ipynb  LNS_Series2_NB3_Transition.ipynb  LNS_Series2_NB4_Developed_Turbulence.ipynb  LNS_Validation_Implementation_Plan.md  Phase1_Completion_Report.md  Phase2_Completion_Report.md
04_Phase4_Physics_Analysis/: Corrected_Implementation_Design.md  Critical_Implementation_Analysis.md  Phase4_Implementation_Plan.md  Phase4_Physics_Gap_Analysis.md  README.md  Tier3_Complete_Theoretical_Mastery.md
05_Comparative_Studies/: Comparative_Studies_Plan.md
05_From_LNS_to Einstein's_Universe/: Relativistic_Series_NB1_Classical_Failure.ipynb  Relativistic_Series_NB2_Israel_Stewart.ipynb  Relativistic_Series_NB3_Applications.ipynb
06_LNS_for_Complex_Fluids/: outline.md
06_Rebuilt_LNS_Implementation/: ADVANCED_VALIDATION_REPORT.md  ARCHITECTURE_REFACTOR_SUMMARY.md  CRITICAL_BUG_FIX_REPORT.md  PROGRESS_SUMMARY.md  (+24 more)
(+46 files in other folders)
