[project]
name = "local-navier-stokes"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "jupyter>=1.0.0",
    "scipy>=1.10.0",
    "pandas>=2.3.1",
    "ufl>=2017.1.0",
    "petsc>=3.23.4",
    "pytest>=8.4.1",
    "h5py>=3.14.0",
    "numba>=0.61.2",
]
